# lidar-viewer

./: .gitignore  CMakeLists.txt  README.md  makefile
src/: lib.h  main.cpp
